@@ -141,3 +141,105 @@ AT_CHECK([./prog], [0],
 ])
 
 AT_CLEANUP
+
+
+AT_SETUP([non-overflow after overflow])
+
+AT_DATA([prog.cob], [
+IDENTIFICATION  DIVISION.
+PROGRAM-ID.     prog.
+DATA            DIVISION.
+WORKING-STORAGE SECTION.
+01 X            PIC 9(2) VALUE 0.
+01 Y            PIC 9(2) VALUE 0.
+PROCEDURE       DIVISION.
+  COMPUTE X = 100.
+  COMPUTE Y = 99.
+  DISPLAY Y.
+  STOP RUN.
+])
+
+AT_CHECK([cobc -main prog.cob], [0])
+AT_CHECK([./prog], [0],
+[99
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([Class check with reference modification])
+
+AT_DATA([prog.cob], [
+IDENTIFICATION  DIVISION.
+PROGRAM-ID.     prog.
+DATA            DIVISION.
+WORKING-STORAGE SECTION.
+01 X            PIC X(6) VALUE "123   ".
+PROCEDURE       DIVISION.
+  IF X(1:3) NUMERIC
+    DISPLAY "OK".
+  STOP RUN.
+])
+
+AT_CHECK([cobc -main prog.cob], [0])
+AT_CHECK([./prog], [0],
+[OK
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([STRING with subscript reference])
+
+AT_DATA([prog.cob], [
+IDENTIFICATION  DIVISION.
+PROGRAM-ID.     prog.
+DATA            DIVISION.
+WORKING-STORAGE SECTION.
+01 G.
+02 X            PIC X(3) OCCURS 3.
+PROCEDURE       DIVISION.
+  STRING "abc" INTO X(1).
+  DISPLAY X(1).
+  STOP RUN.
+])
+
+AT_CHECK([cobc -main prog.cob], [0])
+AT_CHECK([./prog], [0],
+[abc
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([First READ on an empty SEQUENTIAL INDEXED file])
+
+AT_DATA([prog.cob], [
+IDENTIFICATION  DIVISION.
+PROGRAM-ID.     prog.
+ENVIRONMENT     DIVISION.
+INPUT-OUTPUT    SECTION.
+FILE-CONTROL.
+SELECT TEST-FILE ASSIGN       "./TEST-FILE"
+                 ORGANIZATION IS  INDEXED
+                 ACCESS MODE  IS  SEQUENTIAL
+                 RECORD KEY   IS  TEST-KEY.
+DATA            DIVISION.
+FILE            SECTION.
+FD  TEST-FILE.
+01  TEST-KEY        PIC X(10).
+PROCEDURE       DIVISION.
+  OPEN  OUTPUT TEST-FILE.
+  CLOSE TEST-FILE.
+  OPEN  INPUT  TEST-FILE.
+  READ  TEST-FILE AT END DISPLAY "OK" END-READ.
+  CLOSE TEST-FILE.
+  STOP RUN.
+])
+
+AT_CHECK([cobc -main prog.cob], [0])
+AT_CHECK([./prog], [0],
+[OK
+])
+
+AT_CLEANUP
