@@ -1,3 +1,7 @@
+2003-02-28  Keisuke Nishida  <knishida@netlab.jp>
+
+	* reference.at: Combine runtime.at and subref.at.
+
 2003-02-25  Keisuke Nishida  <knishida@netlab.jp>
 
 	* definition.at, misc.at: New files.
